2012-09-21  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* create.c: Major changes to incorporate CPU affinity inheritance.
	* pthread_self.c: Likewise.
	* ptw32_new.c (cpuset): Initialise new pthread_thread_t element.
	* pthread.h (DWORD_PTR): Conditional definition moved to sched.h.
	* sched.h (DWORD_PTR): As above; other changes.
	
2012-09-18  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* sched_setaffinity.c: New API to set process CPU affinity in POSIX
	context; compatibility with Linux.
	* pthread_setaffinity.c: Likewise.
	* implement.h (pthread_t_): Added cpuset element.
	* sched.h: Added new prototypes. 
	* sched.h (cpu_set_t): Support for new process and thread affinity API.
	* pthread.h: Added new prototypes.

2012-09-16  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* README (Version numbering): Changes back to major.minor.micro.
	* README.NONPORTABLE: Updated description around process/thread
	attach/detach routines.

2012-09-05  Daniel Richard. G <danielg at teragram dot com>

	* implement.h: whitespace adjustment.
	* dll.c: Facilitate PTW32_STATIC_LIB being defined in a header file.

2012-09-04  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (VCEFLAGS): Changed from /EHsc to /EHs which fixed a problem
	in tests/once3.c which was causing it to hang.

2012-09-03  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile: Remove descriptive info from help target, just list the
	available targets. Output tends to be poorly formatted and cluttered
	otherwise.
	(VCE-static): Add VC++ static build target.
	(VCE-small-static): Likewise.
	(VCE-small-static-debug): Likewise.
	(VCE-small-static-debug): Likewise.

2012-09-02  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* All: correct spelling to 'cancellation'.

2012-08-31  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* pthread_attr_getschedpolicy.c: Remove pedantic arg check.