@@ -15,9 +15,7 @@
  *
  *      Pthreads-win32 - POSIX Threads Library for Win32
  *      Copyright(C) 1998 John E. Bossom
- *      Copyright(C) 1999,2005 Pthreads-win32 contributors
- * 
- *      Contact Email: rpj@callisto.canberra.edu.au
+ *      Copyright(C) 1999,2012 Pthreads-win32 contributors
  * 
  *      The current list of contributors is contained
  *      in the file CONTRIBUTORS included with the source
@@ -74,48 +72,52 @@ sem_post (sem_t * sem)
       */
 {
   int result = 0;
-  sem_t s = *sem;
 
-  if (s == NULL)
+  if (NULL == sem || NULL == *sem)
     {
       result = EINVAL;
     }
-  else if ((result = pthread_mutex_lock (&s->lock)) == 0)
-    {
-      /* See sem_destroy.c
-       */
-      if (*sem == NULL)
-        {
-          (void) pthread_mutex_unlock (&s->lock);
-          result = EINVAL;
-          return -1;
-        }
-
-      if (s->value < SEM_VALUE_MAX)
+  else
 	{
+	  sem_t s = *sem;
+
+	  if ((result = pthread_mutex_lock (&s->lock)) == 0)
+	    {
+		  /*
+		   *  See sem_destroy.c
+		   */
+		  if (NULL == *sem /* don't test 's' here */)
+		    {
+			  result = EINVAL;
+		    }
+		  else
+		    {
+			  if (s->value < SEM_VALUE_MAX)
+			    {
 #if defined(NEED_SEM)
-	  if (++s->value <= 0
-	      && !SetEvent(s->sem))
-	    {
-	      s->value--;
-	      result = EINVAL;
-	    }
+				  if (++s->value <= 0
+						  && !SetEvent(s->sem))
+				    {
+					  s->value--;
+					  result = EINVAL;
+				    }
 #else
-	  if (++s->value <= 0
-	      && !ReleaseSemaphore (s->sem, 1, NULL))
-	    {
-	      s->value--;
-	      result = EINVAL;
-	    }
+				  if (++s->value <= 0
+						  && !ReleaseSemaphore (s->sem, 1, NULL))
+				    {
+					  s->value--;
+					  result = EINVAL;
+				    }
 #endif /* NEED_SEM */
+			    }
+			  else
+			    {
+				  result = ERANGE;
+			    }
+		    }
+		  (void) pthread_mutex_unlock (&s->lock);
+	    }
 	}
-      else
-	{
-	  result = ERANGE;
-	}
-
-      (void) pthread_mutex_unlock (&s->lock);
-    }
 
   if (result != 0)
     {
@@ -124,5 +126,4 @@ sem_post (sem_t * sem)
     }
 
   return 0;
-
-}				/* sem_post */
+}
