@@ -5,6 +5,8 @@
 	* ptw32_new.c (cpuset): Initialise new pthread_thread_t element.
 	* pthread.h (DWORD_PTR): Conditional definition moved to sched.h.
 	* sched.h (DWORD_PTR): As above; other changes.
+	* sem_post.c: Fix errno handling and restructure.
+	* sem_getvalue.c: Fix return value and restructure.
 	
 2012-09-18  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
